@@ -3,6 +3,7 @@
   to notice when space became available. (#15)
 * Copy out-bound data into pre-shared pages for performance, security
   and simplicity. (#17)
+* Use a centrally sourced Travis file and test OCaml 4.02+ as well.
 
 1.2.0 (2014-12-17):
 * Add profiling tracepoints and labels (#13).
